# certified-assets

./: Cargo.toml  LICENSE  README.md  assets.did  dfx.json
.dfx/local/: canister_ids.json
.dfx/local/canisters/certified_assets/: certified_assets.did.d.ts  certified_assets.did.js  index.js
.dfx/replica-configuration/: replica-1.port
.dfx/state/replicated_state/: ic.json5  nns_public_key.pem  registry.proto
.dfx/state/replicated_state/ic_registry_local_store/: time.local_store.v1.CertificationTime.pb
.dfx/state/replicated_state/ic_registry_local_store/0000000000/00/00/: 01.pb
.dfx/state/replicated_state/node-100/: committee_signing_key  derived_node_id  idkg_mega_encryption_key  ni_dkg_dealing_encryption_key  node_signing_key  transport_tls_certificate
.dfx/state/replicated_state/node-100/crypto/: public_keys.pb  sks_data.pb
.dfx/state/replicated_state/node-100/ic_consensus_pool/certification/: 000013.sst  000015.sst  IDENTITY  LOG  MANIFEST-000003  OPTIONS-000008
.dfx/state/replicated_state/node-100/ic_consensus_pool/consensus/: 000033.sst  000035.sst  000037.sst  000039.sst  000041.sst  000043.sst  000045.sst  000047.sst  000049.sst  000051.sst  000053.sst  IDENTITY  LOG  MANIFEST-000003  OPTIONS-000030
.dfx/state/replicated_state/node-100/state/: states_metadata.pbuf
.dfx/state/replicated_state/node-100/state/checkpoints/00000000000001f4/: system_metadata.pbuf
.dfx/state/replicated_state/node-100/state/checkpoints/00000000000001f4/canister_states/00000000000000000101/: canister.pbuf  queues.pbuf
.dfx/state/replicated_state/node-100/state/checkpoints/00000000000001f4/canister_states/00000000000000010101/: canister.pbuf
.dfx/state/replicated_state/node-100/state/checkpoints/00000000000003e8/: subnet_queues.pbuf  system_metadata.pbuf
.dfx/state/replicated_state/node-100/state/tip/bitcoin/testnet/: state.pbuf
.dfx/state/replicated_state/node-100/state/tip/canister_states/00000000000000000101/: canister.pbuf
.dfx/state/replicated_state/node-100/state/tip/canister_states/00000000000000010101/: canister.pbuf
.github/workflows/: cd.yml  ci-candid.yml  ci-rust.yml  ci.yml  cicd.yml  cla.yml  publish.yml  test-candid.yml
canister/: Cargo.toml  README.md
ic-certified-assets/: Cargo.toml  README.md
ic-certified-assets/src/: lib.rs  tests.rs  url.rs
ic-certified-assets/src/asset_certification/types/: certification.rs  http.rs  rc_bytes.rs
ic-certified-assets/src/state_machine/: mod.rs
licenses/: IC-1.0.txt
src/: Cargo.toml  lib.rs  main.rs  rc_bytes.rs
src/assets/: Cargo.toml
src/assets/src/: lib.rs
