[package]
name = "certified-assets"
version = "0.2.3"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2018"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-certified-assets = "0.2.3"
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"
