[package]
name = "canister"
version = "0.0.0"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2021"
description = "Assets Canister for IC."
repository = "https://github.com/dfinity/sdk"
license = "Apache-2.0"
categories = ["wasm"]
keywords = ["internet-computer", "dfinity"]
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-certified-assets = { path = "../ic-certified-assets" }
ic-cdk.workspace = true
candid.workspace = true
serde.workspace = true
serde_cbor.workspace = true
