[package]
name = "canister"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Assets Canister for IC."
categories = ["wasm"]
keywords = ["internet-computer", "dfinity"]
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-certified-assets = { path = "../ic-certified-assets" }
ic-cdk.workspace = true
candid.workspace = true
serde.workspace = true
serde_cbor.workspace = true
