[package]
name = "certified-assets-lib"
version = "0.1.0"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2018"

[dependencies]
base64 = "0.13"
candid = "0.7.10"
hex = "0.4.3"
ic-cdk = "0.3.3"
ic-cdk-macros = "0.3.3"
ic-types = "0.3.0"
ic-certified-map = { git = "https://github.com/dfinity/cdk-rs", rev = "6c0aa52bc070c4d31a2ca571799f8a11ceb2d6de"}
num-traits = "0.2.14"
serde = "1"
serde_bytes = "0.11"
serde_cbor = "0.11"
sha2 = "0.9.1"
